# endian

./: CMakeLists.txt  README.md  endian.vix  vix.json
examples/: bswap.cpp  detect.cpp  load_store.cpp
include/endian/: endian.hpp
tests/: test_basic.cpp
